<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/start_date_text"
            android:labelFor="@+id/start_date_text"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Start Date"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/filter_start_date"
            android:labelFor="@+id/filter_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="date"
            android:autofillHints="Date; 01/01/1901" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/end_date_text"
            android:labelFor="@+id/end_date_text"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="End Date"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/filter_end_date"
            android:labelFor="@+id/filter_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="date"
            android:autofillHints="Date; 01/01/1901 " />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp">

        <TableRow android:layout_width="match_parent">

            <TextView
                android:id="@+id/Coordinate"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Coordinates"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Lat"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/Longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Lon"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/top_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Top Left"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/tlLat"
                android:labelFor="@+id/tlLat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned"
                android:autofillHints="Latitude; 10.123" />

            <EditText
                android:id="@+id/tlLon"
                android:labelFor="@+id/tlLon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned"
                android:autofillHints="Longitude; 10.123" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/bottom_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Bottom Right"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/brLat"
                android:labelFor="@+id/brLat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned"
                android:autofillHints="Latitude; 10.123" />

            <EditText
                android:id="@+id/brLon"
                android:labelFor="@+id/brLon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned"
                android:autofillHints="Longitude; 10.123" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/keyword_text"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Keyword"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/filter_keyword"
            android:labelFor="@+id/filter_keyword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="text"
            android:autofillHints="Word in photo caption; Dog" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/cancel_filter_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:onClick="onCancel"
            android:text="CANCEL" />

        <Space
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="2" />

        <Button
            android:id="@+id/search_filter_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:onClick="onFilter"
            android:text="SEARCH" />

    </LinearLayout>

</LinearLayout>
