<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:gravity="center"
    android:orientation="vertical">

    <!--ImageView on which image will be set-->

    <!--Button to choose image-->

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_image_24"
        android:contentDescription="@string/desc"
        />

    <TextView
        android:id="@+id/dateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TimeStamp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/coordinate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Location"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/captionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Caption"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/captionArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editCaptionView"
            android:labelFor="@+id/editCaptionView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textPersonName"
            android:autofillHints="Description of Photo"/>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saveCaption"
            android:text="Save" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/prev_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:onClick="traverseGallery"
            android:text="Prev"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/camera_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="dispatchTakePictureIntent"
            android:text="Camera"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:onClick="traverseGallery"
            android:text="next"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <Button
        android:id="@+id/filter_image_btn"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startFilter"
        android:text="Filter Gallery" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:onClick="deletePhoto"
            android:text="Delete"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/edit_caption_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:onClick="editCaption"
            android:text="Edit Caption"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/share_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:onClick="sharePhoto"
            android:text="Share"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>